--- a/index.html
+++ b/index.html
@@ -14,9 +14,17 @@
       const appdata = {
           data() {
               return {
-                  message: 'Hello Vue!'
+                  message: 'Hello Vue!',
+                  count: 0
               }
+          },
+          mounted() {
+              setInterval(() => {
+                  this.count++
+                  this.message = 'Count:' + this.count
+              }, 1000)
           }
+
       }
       Vue.createApp(appdata).mount('#app')
   </script>
