--- a/sample_page.html
+++ b/sample_page.html
@@ -26,24 +26,26 @@
 </style>
 <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
 <div id="app" class="container">
-    <p v-bind:class="{red:isRed, blue:isBlue}">
+    <p v-bind:class="classes">
         {{ message }}
     </p>
 </div>
 <script>
+    var classObj = {
+        red: true,
+        blue: false
+    }
     const appdata = {
         data() {
             return {
-                message:null,
-                isRed:'ture',
-                isBlue:false
+                message : 'This is sample page.',
+                classes : classObj
             }
         },
         mounted() {
-            this.message = 'This is sample page.'
             setInterval(() => {
-                this.isBlue = !this.isBlue
-                this.isRed = !this.isRed
+                this.classes.red = !classObj.red
+                this.classes.blue = !classObj.blue
             }, 1000)
         }
     }
