add-v-bind-style

--- a/sample_page.html
+++ b/sample_page.html
@@ -26,7 +26,7 @@
 </style>
 <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
 <div id="app" class="container">
-    <p v-bind:class="classes">
+    <p v-bind:style="{fontSize:'20pt', color:'red', border:'2px solid'}">
         {{ message }}
     </p>
 </div>
