add-v-bind-styles-basic

--- a/sample_page.html
+++ b/sample_page.html
@@ -26,27 +26,25 @@
 </style>
 <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
 <div id="app" class="container">
-    <p v-bind:style="{fontSize:'20pt', color:'red', border:'2px solid'}">
+    <p v-bind:style="styles">
         {{ message }}
     </p>
 </div>
 <script>
-    var classObj = {
-        red: true,
-        blue: false
+    var styles = {
+        margin: '10px',
+        padding: '5px 20px',
+        fontSize: '20pt',
+        color: 'red',
+        backgroundColor: '#fee',
+        border: '3px solid blue'
     }
     const appdata = {
         data() {
             return {
                 message : 'This is sample page.',
-                classes : classObj
+                styles : styles
             }
-        },
-        mounted() {
-            setInterval(() => {
-                this.classes.red = !classObj.red
-                this.classes.blue = !classObj.blue
-            }, 1000)
         }
     }
     let app = Vue.createApp(appdata)
