--- a/sample_page.html
+++ b/sample_page.html
@@ -11,40 +11,38 @@
 </head>
 <body>
 <style>
-    .red {
-        font-size: 32pt;
-        font-weight: plain;
-        font-style: normal;
-        color: red;
-    }
-    .blue {
+    .ok {
         font-size: 24pt;
-        font-weight: bold;
-        font-style: italic;
+        padding: 5px 10px;
+        border: 2px solid red;
         color: blue;
+    }
+    .ng {
+        font-size: 20pt;
+        color: gray;
     }
 </style>
 <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
 <div id="app" class="container">
-    <p v-bind:style="styles">
+    <p v-if="flag" class="ok">
         {{ message }}
+    </p>
+    <p v-else class="ng">
+        ※現在、問題が発生中です....
     </p>
 </div>
 <script>
-    var styles = {
-        margin: '10px',
-        padding: '5px 20px',
-        fontSize: '20pt',
-        color: 'red',
-        backgroundColor: '#fee',
-        border: '3px solid blue'
-    }
     const appdata = {
         data() {
             return {
                 message : 'This is sample page.',
-                styles : styles
+                flag : true
             }
+        },
+        mounted() {
+            setInterval(() => {
+                this.flag = !this.flag
+            }, 3000)
         }
     }
     let app = Vue.createApp(appdata)
