--- a/sample_page.html
+++ b/sample_page.html
@@ -17,12 +17,14 @@
         <table class="table">
             <thead class="thead-dark">
                 <tr>
+                    <th>ID</th>
                     <th>Name</th>
                     <th>Mail</th>
                     <th>Tel</th>
                 </tr>
             </thead>
-            <tr v-for="item in items">
+            <tr v-for="(item, id) in items">
+                <td>{{id}}</td>
                 <td>{{item.name}}</td>
                 <td>{{item.mail}}</td>
                 <td>{{item.tel}}</td>
