--- a/sample_page.html
+++ b/sample_page.html
@@ -17,15 +17,13 @@
         <table class="table">
             <thead class="thead-dark">
                 <tr>
-                    <th>ID</th>
                     <th>Name</th>
                     <th>Mail</th>
                     <th>Tel</th>
                 </tr>
             </thead>
-            <tr v-for="(item, id) in items">
-                <td>{{id}}</td>
-                <td>{{item.name}}</td>
+            <tr v-for="(item, key) in items">
+                <td>{{key}}</td>
                 <td>{{item.mail}}</td>
                 <td>{{item.tel}}</td>
             </tr>
@@ -41,12 +39,12 @@
     </template>
 </div>
 <script>
-    const items = [
-        {name:'Taro', mail:'taro@yamada', tel:'000-000'},
-        {name:'Hanako', mail:'hanako@flower', tel:'111-111'},
-        {name:'Sachiko', mail:'sachiko@happy', tel:'222-222'},
-        {name:'Jiro', mail:'jiro@change', tel:'333-333'}
-    ]
+    const items = {
+        Taro: {mail:'taro@yamada', tel:'000-000'},
+        Hanako: {mail:'hanako@flower', tel:'111-111'},
+        Sachiko: {mail:'sachiko@happy', tel:'222-222'},
+        Jiro: {mail:'jiro@change', tel:'333-333'}
+    }
     const appdata = {
         data() {
             return {
