--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
       }
       let app = Vue.createApp(appdata)
       app.component('hello', {
-          template: '<p class="alert alert-primary">Hello!</p>'
+          data() {
+            return {
+                message: 'これは新しいメッセージです。'
+            }
+          },
+          template: '<p class="alert alert-primary">{{message}}</p>'
       })
       app.mount('#app')
   </script>
