--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
   <div id="app" class="container">
       <p>{{message}}</p>
-      <hello/>
+      <div><hello name="Taro"/></div>
+      <div><hello name="Hanako"/></div>
   </div>
   <script>
       const appdata = {
@@ -25,12 +26,13 @@
       }
       let app = Vue.createApp(appdata)
       app.component('hello', {
+          props:['name'],
           data() {
             return {
-                message: 'これは新しいメッセージです。'
+                message: '※コンポーネントを表示する'
             }
           },
-          template: '<p class="alert alert-primary">{{message}}</p>'
+          template: '<p class="alert alert-primary">Hello, {{name}}!</p>'
       })
       app.mount('#app')
   </script>
