--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
   <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
   <div id="app" class="container">
       <p>{{message}}</p>
-      <div><hello name="Taro"/></div>
-      <div><hello name="Hanako"/></div>
+      <hello v-for="item in data" v-bind:name="item"/>
   </div>
   <script>
       const appdata = {
           data() {
               return {
-                  message:'※コンポーネントを表示する'
+                  message:'※コンポーネントを表示する',
+                  data: ['Taro', 'Hanako', 'Sachiko', 'Jiro']
               }
           },
       }
       let app = Vue.createApp(appdata)
       app.component('hello', {
-          props:['name'],
+          props:{name:String},
           data() {
             return {
-                message: '※コンポーネントを表示する'
+                message: 'これは新しいメッセージです',
             }
           },
           template: '<p class="alert alert-primary">Hello, {{name}}!</p>'
