--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
   <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
   <div id="app" class="container">
       <p>{{message}}</p>
-      <div><hello v-bind:name="name"/></div>
-      <div class="form-group">
-          <input type="text" v-model="name" class="form-control">
-      </div>
+      <hello />
   </div>
   <script>
       const appdata = {
@@ -29,8 +26,12 @@
       }
       let app = Vue.createApp(appdata)
       app.component('hello', {
-          props:['name'],
-          template: '<p class="alert alert-primary">Hello, {{name}}!</p>'
+          data() {
+              return {
+                  counter: 0
+              }
+          },
+          template: '<p v-on:click="counter++" class="alert alert-info">Clicked: {{counter}}</p>'
       })
       app.mount('#app')
   </script>
