add-v-bind-methods-click-on-change-class

--- a/index.html
+++ b/index.html
@@ -28,10 +28,27 @@
       app.component('hello', {
           data() {
               return {
-                  counter: 0
+                  counter: 0,
+                  isInfo: true,
+                  isDark: false
               }
           },
-          template: '<p v-on:click="counter++" class="alert alert-info">Clicked: {{counter}}</p>'
+          methods: {
+              doAction() {
+                  this.counter++
+                  console.log("counter")
+                  if (this.counter % 2 == 0) {
+                      this.isInfo = true
+                      this.isDark = false
+                      console.log("true")
+                  } else {
+                      this.isInfo = false
+                      this.isDark = true
+                      console.log("false")
+                  }
+              }
+          },
+          template: '<p v-on:click="doAction" v-bind:class="{\'alert-warning\':isInfo, \'alert-dark\':isDark}" class="alert">Clicked: {{counter}}.</p>'
       })
       app.mount('#app')
   </script>
