add-v-on-click-event-with-components

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <h1 class="bg-secondary text-white display-4 px-3">Vue3</h1>
   <div id="app" class="container">
       <p>{{message}}</p>
-      <hello />
+      <div><hello /></div>
+      <div><hello /></div>
+      <div><hello /></div>
   </div>
   <script>
       const appdata = {
@@ -22,31 +24,21 @@
                   message:'※コンポーネントを表示する',
               }
           },
+          components: {
+              hello: {
+                  data() {
+                      return {
+                          counter: 0,
+                      }
+                  },
+                  template: `
+                    <div>
+                    <p v-on:click="counter++" class="alert alert-info h4">Clicked:{{ counter }}</p>
+                    </div>`,
+              }
+          }
       }
       let app = Vue.createApp(appdata)
-      app.component('hello', {
-          data() {
-              return {
-                  num: 0,
-                  message: 'type a number'
-              }
-          },
-          methods: {
-              calc() {
-                  var total = 0
-                  for (var i = 1; i <= this.num; i++) {
-                    total += 1
-                  }
-                  this.message = "total:" + total
-              }
-          },
-          template: `<div>
-            <p class="alert alert-info h4">{{message}}</p>
-            <div>
-              <input type="number" class="form-control" v-on:input="calc" v-model="num">
-            </div>
-          </div>`
-      })
       app.mount('#app')
   </script>
 </body>
